--- a/TanakaStoria/UnityVS.TanakaStoria.CSharp.csproj
+++ b/TanakaStoria/UnityVS.TanakaStoria.CSharp.csproj
@@ -7,16 +7,14 @@
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{072C4015-5D4C-F833-C6E9-99705615C06F}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>
-    </RootNamespace>
+    <RootNamespace></RootNamespace>
     <AssemblyName>Assembly-CSharp</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{E097FAD1-6243-4DAD-9C02-E9B9EFC3FFC1};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
-    <CompilerResponseFile>
-    </CompilerResponseFile>
+    <CompilerResponseFile></CompilerResponseFile>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>Android:13</UnityBuildTarget>
     <UnityVersion>4.6.3f1</UnityVersion>
@@ -58,9 +56,7 @@
   <ItemGroup>
     <Compile Include="Assets\C#Script\Character\CharacterBase.cs" />
     <Compile Include="Assets\C#Script\Character\player\CharacterPlayerUnit.cs" />
-    <Compile Include="Assets\C#Script\Character\player\CharacterSample.cs" />
     <Compile Include="Assets\C#Script\Character\player\CharacterUnityChan.cs" />
-    <Compile Include="Assets\C#Script\Character\player\KnightAnimation.cs" />
     <Compile Include="Assets\C#Script\Character\player\KnightBase.cs" />
     <Compile Include="Assets\C#Script\Define.cs" />
     <Compile Include="Assets\C#Script\GameManager.cs" />
