--- a/TanakaStoria/UnityVS.TanakaStoria.CSharp.csproj
+++ b/TanakaStoria/UnityVS.TanakaStoria.CSharp.csproj
@@ -55,6 +55,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\C#Script\Character\CharacterBase.cs" />
+    <Compile Include="Assets\C#Script\Character\enemy\CharacterEnemyUnit.cs" />
+    <Compile Include="Assets\C#Script\Character\enemy\DarkKnightBase.cs" />
     <Compile Include="Assets\C#Script\Character\player\CharacterPlayerUnit.cs" />
     <Compile Include="Assets\C#Script\Character\player\CharacterUnityChan.cs" />
     <Compile Include="Assets\C#Script\Character\player\KnightBase.cs" />
@@ -76,6 +78,8 @@
     <Compile Include="Assets\Resources\character\player\UnityChan2D\Scripts\UnityChan2DController.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Assets\Document\unityデータフォーマット暫定版\unity2Dデータフォーマット.txt" />
+    <None Include="Assets\Document\仕様書\tnks_project.txt" />
     <None Include="Assets\Resources\character\player\UnityChan2D\Demo\Sounds\Voice\unity-chan_voice_list.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2012\UnityVS.CSharp.targets" />
