--- a/TanakaStoria/UnityVS.TanakaStoria.CSharp.csproj
+++ b/TanakaStoria/UnityVS.TanakaStoria.CSharp.csproj
@@ -55,32 +55,32 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\C#Script\Character\CharacterBase.cs" />
-    <Compile Include="Assets\C#Script\Character\enemy\CharacterEnemyUnit.cs" />
-    <Compile Include="Assets\C#Script\Character\enemy\DarkKnightBase.cs" />
-    <Compile Include="Assets\C#Script\Character\player\CharacterPlayerUnit.cs" />
-    <Compile Include="Assets\C#Script\Character\player\CharacterUnityChan.cs" />
-    <Compile Include="Assets\C#Script\Character\player\KnightBase.cs" />
+    <Compile Include="Assets\C#Script\Character\Enemy\CharacterEnemyUnit.cs" />
+    <Compile Include="Assets\C#Script\Character\Enemy\DarkKnightBase.cs" />
+    <Compile Include="Assets\C#Script\Character\Player\CharacterPlayerUnit.cs" />
+    <Compile Include="Assets\C#Script\Character\Player\CharacterUnityChan.cs" />
+    <Compile Include="Assets\C#Script\Character\Player\KnightBase.cs" />
     <Compile Include="Assets\C#Script\Define.cs" />
     <Compile Include="Assets\C#Script\GameManager.cs" />
-    <Compile Include="Assets\Resources\character\player\UnityChan2D\Demo\Scripts\AudioSourceController.cs" />
-    <Compile Include="Assets\Resources\character\player\UnityChan2D\Demo\Scripts\BlockController.cs" />
-    <Compile Include="Assets\Resources\character\player\UnityChan2D\Demo\Scripts\BrokenBlockController.cs" />
-    <Compile Include="Assets\Resources\character\player\UnityChan2D\Demo\Scripts\CameraController.cs" />
-    <Compile Include="Assets\Resources\character\player\UnityChan2D\Demo\Scripts\CoinController.cs" />
-    <Compile Include="Assets\Resources\character\player\UnityChan2D\Demo\Scripts\Demo.cs" />
-    <Compile Include="Assets\Resources\character\player\UnityChan2D\Demo\Scripts\IntroCameraController.cs" />
-    <Compile Include="Assets\Resources\character\player\UnityChan2D\Demo\Scripts\LoadingController.cs" />
-    <Compile Include="Assets\Resources\character\player\UnityChan2D\Demo\Scripts\Loop.cs" />
-    <Compile Include="Assets\Resources\character\player\UnityChan2D\Demo\Scripts\PointController.cs" />
-    <Compile Include="Assets\Resources\character\player\UnityChan2D\Demo\Scripts\SceneNameAttribute.cs" />
-    <Compile Include="Assets\Resources\character\player\UnityChan2D\Demo\Scripts\StartController.cs" />
-    <Compile Include="Assets\Resources\character\player\UnityChan2D\Demo\Scripts\TimeController.cs" />
-    <Compile Include="Assets\Resources\character\player\UnityChan2D\Scripts\UnityChan2DController.cs" />
+    <Compile Include="Assets\Resources\Character\Player\UnityChan2D\Demo\Scripts\AudioSourceController.cs" />
+    <Compile Include="Assets\Resources\Character\Player\UnityChan2D\Demo\Scripts\BlockController.cs" />
+    <Compile Include="Assets\Resources\Character\Player\UnityChan2D\Demo\Scripts\BrokenBlockController.cs" />
+    <Compile Include="Assets\Resources\Character\Player\UnityChan2D\Demo\Scripts\CameraController.cs" />
+    <Compile Include="Assets\Resources\Character\Player\UnityChan2D\Demo\Scripts\CoinController.cs" />
+    <Compile Include="Assets\Resources\Character\Player\UnityChan2D\Demo\Scripts\Demo.cs" />
+    <Compile Include="Assets\Resources\Character\Player\UnityChan2D\Demo\Scripts\IntroCameraController.cs" />
+    <Compile Include="Assets\Resources\Character\Player\UnityChan2D\Demo\Scripts\LoadingController.cs" />
+    <Compile Include="Assets\Resources\Character\Player\UnityChan2D\Demo\Scripts\Loop.cs" />
+    <Compile Include="Assets\Resources\Character\Player\UnityChan2D\Demo\Scripts\PointController.cs" />
+    <Compile Include="Assets\Resources\Character\Player\UnityChan2D\Demo\Scripts\SceneNameAttribute.cs" />
+    <Compile Include="Assets\Resources\Character\Player\UnityChan2D\Demo\Scripts\StartController.cs" />
+    <Compile Include="Assets\Resources\Character\Player\UnityChan2D\Demo\Scripts\TimeController.cs" />
+    <Compile Include="Assets\Resources\Character\Player\UnityChan2D\Scripts\UnityChan2DController.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Document\unityデータフォーマット暫定版\unity2Dデータフォーマット.txt" />
     <None Include="Assets\Document\仕様書\tnks_project.txt" />
-    <None Include="Assets\Resources\character\player\UnityChan2D\Demo\Sounds\Voice\unity-chan_voice_list.txt" />
+    <None Include="Assets\Resources\Character\Player\UnityChan2D\Demo\Sounds\Voice\unity-chan_voice_list.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2012\UnityVS.CSharp.targets" />
 </Project>
